tests/baselines/reference/computedPropertiesInDestructuring1_ES6.errors.txt
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(3,21): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(9,25): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(11,25): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(12,28): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(21,8): error TS2349: Cannot invoke an expression whose type lacks a call signature.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(21,27): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(22,12): error TS2339: Property 'toExponential' does not exist on type 'string'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(22,41): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(25,18): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(29,22): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(31,21): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(32,24): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(34,4): error TS2349: Cannot invoke an expression whose type lacks a call signature.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(34,23): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(35,5): error TS2365: Operator '+' cannot be applied to types 'number' and '{}'.
tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts(35,26): error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.


==== tests/cases/compiler/computedPropertiesInDestructuring1_ES6.ts (16 errors) ====
    // destructuring in variable declarations
    let foo = "bar";
    let {[foo]: bar} = {bar: "bar"};
                        ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    
    let {["bar"]: bar2} = {bar: "bar"};
    let {[11]: bar2_1} = {11: "bar"};
    
    let foo2 = () => "bar";
    let {[foo2()]: bar3} = {bar: "bar"};
                            ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    
    let [{[foo]: bar4}] = [{bar: "bar"}];
                            ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    let [{[foo2()]: bar5}] = [{bar: "bar"}];
                               ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    
    function f1({["bar"]: x}: { bar: number }) {}
    function f2({[foo]: x}: { bar: number }) {}
    function f3({[foo2()]: x}: { bar: number }) {}
    function f4([{[foo]: x}]: [{ bar: number }]) {}
    function f5([{[foo2()]: x}]: [{ bar: number }]) {}
    
    // report errors on type errors in computed properties used in destructuring
    let [{[foo()]: bar6}] = [{bar: "bar"}];
           ~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature.
                              ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    let [{[foo.toExponential()]: bar7}] = [{bar: "bar"}];
               ~~~~~~~~~~~~~
!!! error TS2339: Property 'toExponential' does not exist on type 'string'.
                                            ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    
    // destructuring assignment
    ({[foo]: bar} = {bar: "bar"});
                     ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    
    ({["bar"]: bar2} = {bar: "bar"});
    
    ({[foo2()]: bar3} = {bar: "bar"});
                         ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    
    [{[foo]: bar4}] = [{bar: "bar"}];
                        ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    [{[foo2()]: bar5}] = [{bar: "bar"}];
                           ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    
    [{[foo()]: bar4}] = [{bar: "bar"}];
       ~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature.
                          ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    [{[(1 + {})]: bar4}] = [{bar: "bar"}];
        ~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'number' and '{}'.
                             ~~~
!!! error TS2353: Object literal may only specify known properties, and 'bar' does not exist in type '{}'.
    